--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.13.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
