--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.gchauvet</groupId>
+    <groupId>pro.cyberyon</groupId>
     <artifactId>mojet</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <name>Mojet Spring Batch extension</name>
     <scm>
         <connection>scm:git:git://github.com/gchauvet/mojet.git</connection>
         <developerConnection>scm:git:ssh://github.com/gchauvet/mojet.git</developerConnection>
@@ -118,5 +119,4 @@
         <sonar.organization>cyberyon</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
-    <name>Mojet Spring Batch extension</name>
 </project>
