--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,9 +16,19 @@ jobs:
       - name: Configure Git to use PAT
         run: |
           git config --global user.name "GitHub Bot"
-          git config --global user.email "bot.github@users.noreply.github.com"
+          git config --global user.email "bot@users.noreply.github.com"
           git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
       - name: Run Maven Release
         run: ./mvnw -B release:prepare release:perform
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Deploy to Maven Central
+        uses: actions/setup-java@v4
+        with:
+          gpg-key-name: ${{ secretes.GPG_KEY_NAME }}
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
+          server-id: ossrh
+          server-username: ${{ secrets.OSS_ACCESS_KEY_ID }}
+          server-password: ${{ OSS_ACCESS_KEY_SECRET }}
+        run: mvn -B deploy -Prelease -Dgpg.keyname=${{ secrets.GPG_PASSPHRASE }}
