--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
     </build>
     <profiles>
         <profile>
-            <id>release</id>
+            <id>publish</id>
             <build>
                 <plugins>
                     <plugin>
