--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,28 @@
     </build>
     <profiles>
         <profile>
+            <id>local</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>net.revelc.code.formatter</groupId>
+                        <artifactId>formatter-maven-plugin</artifactId>
+                        <version>2.26.0</version>
+                        <configuration>
+                            <configFile>${project.basedir}/eclipse-formatter.xml</configFile>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>format</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>publish</id>
             <build>
                 <plugins>
