--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,5 +21,5 @@ jobs:
           gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
           server-id: ossrh
           server-username: ${{ secrets.OSS_ACCESS_KEY_ID }}
-          server-password: ${{ OSS_ACCESS_KEY_SECRET }}
+          server-password: ${{ secrets.OSS_ACCESS_KEY_SECRET }}
         run: ./mvnw -P!local -B deploy -Pcentral -Dgpg.keyname=${{ secrets.GPG_KEY_NAME }}
