--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>pro.cyberyon</groupId>
     <artifactId>mojet</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Mojet Spring Batch extension</name>
     <scm>
-        <connection>scm:git:git://github.com/gchauvet/mojet.git</connection>
-        <developerConnection>scm:git:ssh://github.com/gchauvet/mojet.git</developerConnection>
+        <connection>scm:git@github.com:gchauvet/mojet.git</connection>
+        <developerConnection>scm:git@github.com:gchauvet/mojet.git</developerConnection>
         <url>https://github.com/gchauvet/mojet</url>
         <tag>HEAD</tag>
     </scm>
@@ -125,6 +125,7 @@
                 <configuration>
                     <tagNameFormat>@{project.version}</tagNameFormat>
                     <pushChanges>true</pushChanges>
+                    <username>git</username>
                     <scmCommentPrefix>[BOT](release): </scmCommentPrefix>
                 </configuration>
             </plugin>
